--- a/views/rank.jade
+++ b/views/rank.jade
@@ -38,6 +38,7 @@ block content
             p 
               span(style='font-size:48px') 0
             h5 posts
+          h4.text-danger System Error... Profile Fail?
           p.text-warning If the profile link above does not work, you need to change your 
             a(href='http://forum.boundstar.com') forum name 
             | to match what you see on 
@@ -74,6 +75,7 @@ block content
               h5 votes this month
           .clearfix
           hr
+          h4.text-danger System Error... Go Vote!
           p.text-warning You need at least 1 vote to upgrade! Use your player name like you see in the corner (no email addresses).
           script(src='http://starbound-servers.net/embed.js?id=313&type=votes&size=small')
       if user.profile.rank == 'Player'
