--- a/views/account/signup.jade
+++ b/views/account/signup.jade
@@ -31,6 +31,7 @@ block content
           i.fa.fa-check
           | Signup
     p
+    p We do not spam, and will never sell your email address.
   script.
     $(function($){
       $.get("http://ipinfo.io", function(response) {
