--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -12,6 +12,8 @@
       ul.nav.navbar-nav
         li(class=title=='Boundstar'?'active':undefined)
           a(href='/') Home
+        li(class=title)
+          a(href='http://forum.boundstar.com') Forum
         li(class=title=='Rank Manager'?'active':undefined)
           a(href='/rank') Rank
         li(class=title=='Player Manager'?'active':undefined)
