new public players view, old view moved to /crash/players and made public (but not the individual view)

--- a/views/players.jade
+++ b/views/players.jade
@@ -13,4 +13,4 @@ block content
     each player in players
       .col-sm-3
         p 
-          a(href='/player/#{player.name}') #{player.name.replace(/\^[\s\S]*;/,'','g')}
+          a(href='/crash/player/#{player.name}') #{player.name.replace(/\^[\s\S]*;/,'','g')}
