--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -11,3 +11,5 @@
         |  Players Online
       ul#players.players
       p *this is a live updated list
+      p 
+        a(href='/crash/players') all players ever
