--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,4 +1,23 @@
-include default.html.jade
+doctype html
+html(lang="en")
+  head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(name='description', content='')
+    meta(name='csrf-token', content=token)
+    meta(name='author', content='')
+    title #{title} | Boundstar - Starbound Server
+    != css('styles')
+    != js('application')
+    script(defer='defer' src='/assets/js/jquery.backstretch.min.js')
+    script.
+      $(function($){
+        $.backstretch("/assets/img/bg.png", {speed: 1000});
+      });
+  body
+    include default.html.jade
+
 //- doctype html
 //- html(lang="en")
 
