--- a/views/partials/sidebar.jade
+++ b/views/partials/sidebar.jade
@@ -6,6 +6,7 @@
       br
       br
       br
+      script(src='http://starbound-servers.net/embed.js?id=313&type=votes&size=small')
       h3.online
         span#numOnline
         |  Players Online
