--- a/views/boundstar_players.jade
+++ b/views/boundstar_players.jade
@@ -1,85 +1,120 @@
 extends layout
 
 block content
-  .col-md-12
-    .page-header
-      h1 Boundstar Players
-    .row
-      .col-sm-2
-        .well
-          h1 #{players.length}
-          p signups since 4/1/14
-        .well
-          - var player_count = 0;
+  //- .col-sm-12
+  .page-header
+    h1 Boundstar Players
+  .row
+    .col-sm-2
+      .well
+        h1 #{players.length}
+        p signups since 4/1/14
+      .well
+        - var explorer_count = 0;
+        each player in players
+          if player.profile.player && player.profile.rank === 'Explorer'
+            - explorer_count++
+        h1 #{explorer_count}
+        p Explorers
+      .well
+        - var player_count = 0;
+        each player in players
+          if player.profile.player && player.profile.rank === 'Player'
+            - player_count++
+        h1 #{player_count}
+        p Players
+      .well
+        - var recruit_count = 0;
+        each player in players
+          if player.profile.player && player.profile.rank === 'Recruit'
+            - recruit_count++
+        h1 #{recruit_count}
+        p Recruits
+    .col-sm-10
+      legend Explorers
+      table#visits.table.table-bordered.table-striped.table-condensed
+        thead
+          tr
+            td 
+              strong Character
+            td 
+              strong Forum
+            td 
+              strong System
+            td.visible-md.visible-lg
+              strong Worlds
+            td.visible-md.visible-lg
+              strong Rep
+            td.visible-md.visible-lg
+              strong Posts
+            td.visible-md.visible-lg
+              strong Votes
+        tbody
           each player in players
+            //- p=JSON.stringify(player)
+            if player.profile.player && player.profile.rank === 'Explorer'
+              tr
+                td #{player.profile.player}
+                td 
+                  - var forum_url = 'http://forum.boundstar.com/user/'+player.profile.forum.replace(/ /g,'-').toLowerCase();
+                  a(href='#{forum_url}', target='_blank') #{player.profile.forum}
+                td #{player.profile.system.sector} #{player.profile.system.x}, #{player.profile.system.y}: #{player.profile.system.planet}
+                td.visible-md.visible-lg #{player.profile.system.size}
+                td.visible-md.visible-lg #{player.profile.forum_rep}
+                td.visible-md.visible-lg #{player.profile.forum_posts}
+                td.visible-md.visible-lg #{player.profile.thismonth_votes}
+
+    .col-sm-10
+      legend Players
+      table#visits.table.table-bordered.table-striped.table-condensed
+        thead
+          tr
+            td 
+              strong Character
+            td 
+              strong Forum
+            td.visible-md.visible-lg
+              strong Rep
+            td.visible-md.visible-lg
+              strong Posts
+            td.visible-md.visible-lg
+              strong Votes
+        tbody
+          each player in players
+            //- p=JSON.stringify(player)
             if player.profile.player && player.profile.rank === 'Player'
-              - player_count++
-          h1 #{player_count}
-          p Players
-        .well
-          - var recruit_count = 0;
+              tr
+                td #{player.profile.player}
+                td 
+                  - var forum_url = 'http://forum.boundstar.com/user/'+player.profile.forum.replace(/ /g,'-').toLowerCase();
+                  a(href='#{forum_url}', target='_blank') #{player.profile.forum}
+                td.visible-md.visible-lg #{player.profile.forum_rep}
+                td.visible-md.visible-lg #{player.profile.forum_posts}
+                td.visible-md.visible-lg #{player.profile.thismonth_votes}
+    .col-sm-10
+      legend Recruits
+      table#visits.table.table-bordered.table-striped.table-condensed
+        thead
+          tr
+            td 
+              strong Character
+            td 
+              strong Forum
+            td.visible-md.visible-lg
+              strong Rep
+            td.visible-md.visible-lg
+              strong Posts
+            td.visible-md.visible-lg
+              strong Votes
+        tbody
           each player in players
+            //- p=JSON.stringify(player)
             if player.profile.player && player.profile.rank === 'Recruit'
-              - recruit_count++
-          h1 #{recruit_count}
-          p Recruits
-      .col-sm-10
-        legend Players
-        table#visits.table.table-bordered.table-striped.table-condensed
-          thead
-            tr
-              td 
-                strong Character
-              td 
-                strong Rank
-              td 
-                strong Forum
-              td.visible-md
-                strong Rep
-              td.visible-md
-                strong Posts
-              td.visible-md
-                strong Votes
-          tbody
-            each player in players
-              //- p=JSON.stringify(player)
-              if player.profile.player && player.profile.rank === 'Player'
-                tr
-                    td #{player.profile.player}
-                    td #{player.profile.rank}
-                    td 
-                      - var forum_url = 'http://forum.boundstar.com/user/'+player.profile.forum.replace(/ /g,'-').toLowerCase();
-                      a(href='#{forum_url}', target='_blank') #{player.profile.forum}
-                    td.visible-md #{player.profile.forum_rep}
-                    td.visible-md #{player.profile.forum_posts}
-                    td.visible-md #{player.profile.thismonth_votes}
-      .col-sm-10
-        legend Recruits
-        table#visits.table.table-bordered.table-striped.table-condensed
-          thead
-            tr
-              td 
-                strong Character
-              td 
-                strong Rank
-              td 
-                strong Forum
-              td.visible-md
-                strong Rep
-              td.visible-md
-                strong Posts
-              td.visible-md
-                strong Votes
-          tbody
-            each player in players
-              //- p=JSON.stringify(player)
-              if player.profile.player && player.profile.rank === 'Recruit'
-                tr
-                    td #{player.profile.player}
-                    td #{player.profile.rank}
-                    td 
-                      - var forum_url = 'http://forum.boundstar.com/user/'+player.profile.forum.replace(/ /g,'-').toLowerCase();
-                      a(href='#{forum_url}', target='_blank') #{player.profile.forum}
-                    td.visible-md #{player.profile.forum_rep}
-                    td.visible-md #{player.profile.forum_posts}
-                    td.visible-md #{player.profile.thismonth_votes}
+              tr
+                td #{player.profile.player}
+                td 
+                  - var forum_url = 'http://forum.boundstar.com/user/'+player.profile.forum.replace(/ /g,'-').toLowerCase();
+                  a(href='#{forum_url}', target='_blank') #{player.profile.forum}
+                td.visible-md.visible-lg #{player.profile.forum_rep}
+                td.visible-md.visible-lg #{player.profile.forum_posts}
+                td.visible-md.visible-lg #{player.profile.thismonth_votes}
