--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -14,11 +14,9 @@
           a(href='/') Home
         li(class=title)
           a(href='http://forum.boundstar.com') Forum
-        li(class=title=='Rank Manager'?'active':undefined)
-          a(href='/rank') Rank
         li(class=title=='Player Manager'?'active':undefined)
           a(href='/players') Players
-        li.dropdown(class=title=='Worlds'?'active':undefined)
+        //- li.dropdown(class=title=='Worlds'?'active':undefined)
           a.dropdown-toggle(href='#', data-toggle='dropdown') Worlds 
             i.caret
           ul.dropdown-menu
@@ -27,7 +25,17 @@
             li: a(href='/worlds/delta') Delta Sector
             li: a(href='/worlds/gamma') Gamma Sector
             li: a(href='/worlds/sectorx') SectorX
-
+        //- if user
+          if user.profile.rank = 'Player'
+        li.dropdown(class=title=='Systems'?'active':undefined)
+          a.dropdown-toggle(href='#', data-toggle='dropdown') Systems 
+            i.caret
+          ul.dropdown-menu
+            li: a(href='/systems/alpha') Alpha Sector
+            li: a(href='/systems/beta') Beta Sector
+            li: a(href='/systems/delta') Delta Sector
+            li: a(href='/systems/gamma') Gamma Sector
+            li: a(href='/systems/sectorx') SectorX
         //- li(class=title=='Contact'?'active':undefined)
           a(href='/contact') Contact
       if !document
@@ -49,5 +57,6 @@
                 | #{user.profile.player || user.email || user.id}&nbsp;
                 i.caret
               ul.dropdown-menu
-                li: a(href='/account') My Profile
+                li: a(href='/rank') Rank Card
+                li: a(href='/account') Edit Profile
                 li: a(href='/logout') Logout
