--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,7 @@ html(lang="en")
     meta(name='author', content='')
     title #{title} | Boundstar - Starbound Server
     != css('styles')
+    link(href='/starbound-font/starbound-font.css' rel='stylesheet')
     != js('application')
     script(defer='defer' src='/assets/js/jquery.backstretch.min.js')
     script.
