are you a human + signup -> register

--- a/views/account/register.jade
+++ b/views/account/register.jade
@@ -30,8 +30,8 @@ block content
         button.btn.btn-success(type='submit')
           i.fa.fa-check
           | Signup
-    p
-    p We do not spam, and will never sell your email address.
+    .col-sm-offset-3.col-sm-7
+      p We don't spam
   script.
     $(function($){
       $.get("http://ipinfo.io", function(response) {
