--- a/views/partials/navigation.jade
+++ b/views/partials/navigation.jade
@@ -38,6 +38,8 @@
             li: a(href='/systems/sectorx') SectorX
         //- li(class=title=='Contact'?'active':undefined)
           a(href='/contact') Contact
+        li(class=title=='Boundstar Wiki'?'active':undefined)
+          a(href='/wiki') Wiki
       if !document
         ul.nav.navbar-nav.navbar-right
           if !user
