new font for the wiki

--- a/views/default.html.jade
+++ b/views/default.html.jade
@@ -21,6 +21,9 @@ if document
     //-   != styles.toHTML()
     //-   != scripts.toHTML()
     style.
+      #content {
+        font-family: "Montserrat", serif;
+      }
       .starnav {
         position: fixed;
         left: 0;
